# TraderCoreIntegration

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/tradercoreintegration/: __init__.py  ccxt.py  coingecko.py
tests/: test_ccxt_utils.py  test_coingecko.py
